added hover states and symbol on screen

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <div class="calculator-container">
+      <div class="operator"></div>
       <div class="output">0</div>
       <div class="keypad">
         <button class="btn clear bg-grey">C</button>
